Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_dodgekoopaback.yml
+++ b/.github/workflows/main_dodgekoopaback.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - DodgeKoopaBack
+name: Build and deploy Node.js app to Azure Web App - DodgeKoopaBack
 
 on:
   push:
@@ -16,20 +16,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java version
-        uses: actions/setup-java@v4
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
         with:
-          java-version: '17'
-          distribution: 'microsoft'
+          node-version: '18.x'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          name: node-app
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -39,25 +44,28 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
-  
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: java-app
+          name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2096093ED1704279AE7EB4408218B7A8 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CB2A91D3AEA841E39783BF44FEB059DC }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_07578459F7334D00ABF44612D495D22F }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_AF9AA96303134F11A9F0083D3166F67F }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7899D1A7DCDC4155B99C4F569B8695F5 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_AB2DA4C8C9704563975C0ADE0CABA166 }}
 
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'DodgeKoopaBack'
           slot-name: 'Production'
-          package: '*.jar'
+          package: .
           
